2008-02-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/grep.el (grep-compute-defaults):
	Don't mix up defaults for different connections to the same host.

2008-01-31  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* blank-mode.el: Renamed to whitespace.el.

	* obsolete/whitespace.el: Renamed to obsolete/old-whitespace.el.

2008-01-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/rcompile.el (remote-compile): Remove broken code.

2008-01-31  Jason Rumney  <jasonr@gnu.org>

	* term/w32-win.el (image-library-alist): Prefer libxpm.dll.

2008-01-31  Juanma Barranquero  <lekktu@gmail.com>

	* linum.el (linum-unload-function): New function.

2008-01-30  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-var-set-format-regexp): New constant.
	(gdb-var-set-format-handler): New function.
	(gdb-var-set-format): Use it.

2008-01-30  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/check-declare.el (check-declare-directory):
	* emacs-lisp/authors.el (authors): Use `find-program' and
	`grep-program' instead of hardcoded program names.

	* emacs-lisp/cl-loaddefs.el: Update.

2008-01-30  Tassilo Horn  <tassilo@member.fsf.org>

	* info.el (Info-bookmark-make-cell, Info-bookmark-jump): New functions.
	Implement bookmark support the new make-cell/handler way.
	(Info-mode): Bind bookmark-make-cell-function to
	Info-bookmark-make-cell buffer locally.

2008-01-30  Richard Stallman  <rms@gnu.org>

	* progmodes/etags.el (tags-query-replace): Delete unused optional args.
	Doc fix.

	* files.el (hack-local-variables): Don't query about fake variables.

2008-01-30  Markus Triska  <markus.triska@gmx.at>

	* linum.el: New file.

2008-01-29  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-methods): Use "-H" option for "sudo".
	Suggested by Trent W. Buck <trentbuck@gmail.com>.  Make ("%h")
	a single element in "plinkx".
	(tramp-handle-shell-command): Reuse "*Async Shell Command*" or